--- a/app/package.json
+++ b/app/package.json
@@ -10,5 +10,8 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": { }
+  "dependencies": {
+    "pg": "8.5.1",
+    "telegram-node-bot": "4.0.5"
+  }
 }
